# little-STMer

./: N10000k16.graph.inner_parallel.results  N10000k16.graph.outer_parallel.results  N10000k2.graph.inner_parallel.results  N10000k2.graph.outer_parallel.results  N10000k4.graph  N10000k8.graph  N10000k8.graph.inner_parallel.results  N10000k8.graph.outer_parallel.results  README.org  dijkstra.cabal  n100k3.graph  stack.yaml
dist-newstyle/cache/: compiler  config
graphs/: N10000k16.graph  N10000k2.graph  testgraph.txt
results/: N10000k32.graph.inner_parallel.results  N10000k32.graph.outer_parallel.results  N10000k4.graph.inner_parallel.results  N10000k4.graph.outer_parallel.results  n100k3.graph.results
src/: Main.hs
