name:                dijkstra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/OwenPriceSkelly/dijkstra#readme
license:             BSD3
license-file:        LICENSE
author:              Owen Price Skelly
maintainer:          OwenPriceSkelly@uchicago.edu
copyright:           2022 Owen Price Skelly
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dijkstra
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parallel >= 3.2.2.0
                     , monad-par >= 0.3.5
                     , repa >= 3.4.1.4
